--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
 .App {
   text-align: center;
+  background-color: #aac6c6;
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form{
+  
+  margin: 100px auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 20px;
+  background-color: antiquewhite;
+  width: 30vw;
+  height: 300px;
 }
 
-.App-link {
-  color: #61dafb;
+li{
+  padding: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.main{
+  background-color: #aac6c6;
+  height: 100vh;
+}
+
+@media only screen and (max-width:500px){
+  .form{
+    margin: 10px auto;
+    width: 90vw;
+    gap: 10px;
   }
-  to {
-    transform: rotate(360deg);
+  .home{
+    padding: 2px;
   }
 }
