--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,15 @@
-.App {
+.app {
   text-align: center;
   background-color: #aac6c6;
-  height: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .form{
   
-  margin: 100px auto;
+  padding: 100px auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -21,10 +24,6 @@ li{
   padding: 5px;
 }
 
-.main{
-  background-color: #aac6c6;
-  height: 100vh;
-}
 
 @media only screen and (max-width:500px){
   .form{
